# Scalar-sql-debugger

./: .gitignore  1.cpp  2.cpp  3.cpp  Dockerfile  README.md  api.py  env.db  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  actions.py  database.py  environment.py  grader.py
env/tasks/: task_easy.py  task_hard.py  task_medium.py
server/: __init__.py  app.py
typings/openai/: __init__.pyi
